# CaterpillarSimulatorLib

./: .gitignore  Cargo.toml  README.md  renderer.py  setup.py
example/: caterpillar_runner.py  caterpillar_trainer.py
example/controllers/: __init__.py  config.py  linear_actor.py  pepg.py  utils.py
lib/src/: calculations.rs  caterpillar_config.rs  coordinate.rs  dumper.rs  dynamics.rs  lib.rs  path_heights.rs  phase_oscillator.rs  profile_tools.rs  simulation_export.rs  somite.rs  torsion_spring.rs
scripts/: example.py  test_caterpillar.py
src/: caterpillar_config.rs  coordinate.rs  lib.rs  realtime_tunable_spring.rs  simulation_export.rs  somite.rs  spring.rs  torsion_spring.rs
