[package]
name = "caterpillar-lib"
version = "0.1.0"
authors = ["Matthew Ishige <matthewlujp@gmail.com>"]

[lib]
name = "caterpillar"
crate-type = ["cdylib"]

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
features = ["extension-module"]

[dependencies]
serde = "1.0.27"
serde_json = "1.0"
serde_derive = "1.0.27"
